apps/music-app/k8s/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: music-app
  labels:
    name: music-app
    app: music-albums
